# vfhe

./: .clang-format  .editorconfig  .gitignore  .gitmessage  .gitmodules  .pre-commit-config.yaml  .zenodo.json  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json  setup.py
.clusterfuzzlite/: Dockerfile  build.sh  build_c_fuzz_tests_ci.py  project.yaml
.github/: PULL_REQUEST_TEMPLATE.md  coverage-comment.md  dependabot.yml  render_coverage.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/setup-vfhe/: action.yml
.github/workflows/: cflite-batch.yml  ci.yml  codeql.yml  coverage.yml  dependency-review.yml  nightly.yml  release.yml  scorecard.yml
docs/: DEVELOPMENT.md
modules/: conftest.py
modules/arith/: README.md
modules/arith/c/fuzz/: fuzz_ntt.c  fuzz_poly.c
modules/arith/c/include/: arith.h
modules/arith/c/include/arith/: cfft.h  config.h  error.h  mp.h  nt.h  ntt.h  poly.h  ring.h  tower.h  zq.h  zqvec.h
modules/arith/c/src/: arith.c  arith_internal.h  complex.c  field.c  mod.c  mod32.c  mod50.c  mod64.c  mod_portable.c  mp_polynomial.c  ntt.c  ntt32.c  ntt50.c  ntt64.c  ntt_portable.c  number_theory.c  rns_polynomial.c  rns_vector.c
modules/arith/c/src/arch/arm64/: mul64.S
modules/arith/c/src/arch/x86_64/: mul64.S
modules/arith/c/src/encode/: cfft.c  cfft_batch.c
modules/arith/c/src/mp/: mp_bridge.c  mp_internal.h  mp_poly.c  mp_scalar.c
modules/arith/c/src/nt/: nt.c
modules/arith/c/src/ntt/: ntt_avx512_32.c  ntt_avx512_50.c  ntt_avx512_64.c  ntt_avx512_driver.inc  ntt_avx512_tables.c  ntt_backends.h  ntt_plan.c  ntt_portable.c  ntt_tables.c
modules/arith/c/src/poly/: int_poly.c  poly_arith.c  poly_convert.c  poly_core.c  poly_digest.c  poly_gadget.c  poly_galois.c  poly_mul.c  poly_sample.c  poly_slots.c
modules/arith/c/src/ring/: ring.c  ring_internal.h  ring_mul.c
modules/arith/c/src/tower/: baseconv.c  lift.c  limbset.c  rescale.c
modules/arith/c/src/vec/: zq_vec.c
modules/arith/c/src/zq/: zq.c  zq_avx512_32.c  zq_avx512_50.c  zq_avx512_64.c  zq_backends.h  zq_portable.c
modules/arith/c/test/: test_arith.c  test_arith_support.h  test_mod.c  test_mp.c  test_nt.c  test_ntt.c  test_number_theory.c  test_poly.c  test_tower.c  test_vec.c  test_zq.c
modules/arith/python/cdef/: arith.cdef
modules/arith/python/src/vfhe/arith/: __init__.py  asm.py  complex.py  encoding.py  errors.py  field.py  multiprecision.py  ntt.py  number_theory.py  polynomial.py  registry.py  residue_selection.py  ring.py
modules/arith/python/test/: test_arith.py  test_arith_stress.py  test_field.py
modules/base/: README.md
modules/base/c/include/: base.h
modules/base/c/src/: alloc.c  bits.c  cpu.c  debug.c  modswitch.c
modules/base/c/test/: test_base.c
modules/circuit/: README.md
modules/circuit/proto/: buf.yaml
modules/circuit/proto/vfhe/circuit/gkr/v1/: gkr.proto
modules/circuit/python/src/vfhe/circuit/: __init__.py  builder.py  export.py
modules/circuit/python/test/: test_circuit.py
modules/compiler/: README.md
modules/crypto/: README.md
modules/crypto/c/cdef/: crypto.cdef
modules/crypto/c/include/: crypto.h
modules/crypto/c/src/: crypto.c
modules/crypto/c/test/: test_crypto.c
modules/crypto/python/src/vfhe/crypto/: __init__.py  prng.py
modules/crypto/python/test/: test_crypto.py
modules/fhe/: README.md
modules/fhe/c/src/: gp25.c
modules/fhe/python/cdef/: fhe.cdef
modules/fhe/python/src/vfhe/fhe/: __init__.py  cggi16.py  ckks.py  gp25.py
modules/fhe/python/test/: test_cggi16.py  test_ckks.py  test_gp25.py  test_smoke.py
modules/misc/: README.md
modules/misc/c/include/: misc.h
modules/misc/c/src/: aes_rng.c  build_info.c  misc.c  misc_tp.c  prng.c
modules/misc/python/cdef/: misc.cdef
modules/misc/python/src/vfhe/misc/: __init__.py  _native_compiler.py  dynamic_extensions.py  libvfhe.py
modules/misc/python/test/: test_build_hint.py  test_dynamic_extensions.py
modules/mlwe/: README.md
modules/mlwe/c/include/: mlwe.h  rns-rlwe.h
modules/mlwe/c/src/: gadget.c  lwe.c  mgsw.c  mlwe.c
modules/mlwe/python/cdef/: mlwe.cdef
modules/mlwe/python/src/vfhe/mlwe/: __init__.py  lwe.py  mgsw.py  mlwe.py
modules/mlwe/python/test/: test_mlwe.py
modules/piop/: README.md
modules/piop/c/include/: mle.h
modules/piop/c/src/: mle.c
modules/piop/python/cdef/: piop.cdef
modules/piop/python/src/vfhe/piop/: __init__.py  mle.py  piop.py
modules/piop/python/test/: test_mle.py
modules/polycom/: README.md
modules/rng/: README.md
modules/rng/c/include/: rng.h
modules/rng/c/src/: aes_ctr.c  rng_internal.h  sampling.c  seed.c  stream.c
modules/rng/c/test/: test_rng.c
modules/snark/: README.md
modules/vfhe/: README.md
native/: build_ffi.py  discovery.py
packaging/: build_ffi.py  discovery.py  generate_protos.py
packaging/typings/: _vfhe_native.pyi
scripts/: _common.py  build_fuzzers.py  check_install.py  check_simd_build.py  gen_proto.py  run_c_fuzz_tests_local.py  run_c_tests.py  run_smoke_tests.py  smoke.py  smoke_import.py
smoke/: ckks.py
src/vfhe/c_src/: my_ext.c
src/vfhe/include/: my_ext.h
