[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8",
    "wheel",
    "cffi>=1.15",
    "grpcio-tools~=1.81.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "vfhe"
dynamic = ["version"]
description = "A library for verifiable fully homomorphic encryption."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
# `authors` is names-only on purpose: PEP 621 routes name+email entries into the
# structured `Author-email` field, of which PyPI's web UI renders only the FIRST
# entry. Name-only entries populate the plain `Author` field, which PyPI shows
# verbatim -- so all four authors appear. The same people are mirrored into
# `maintainers` WITH emails, so every contact address is preserved (and shown in
# PyPI's "Maintainers" section).
authors = [
    { name = "Daniele Cozzo" },
    { name = "Antonio Guimaraes" },
    { name = "Dario Fiore" },
    { name = "Alin-Petru Rosu" },
]
maintainers = [
    { name = "Daniele Cozzo", email = "daniele.cozzo@imdea.org" },
    { name = "Antonio Guimaraes", email = "antonio.guimaraes@imdea.org" },
    { name = "Dario Fiore", email = "dario.fiore@imdea.org" },
    { name = "Alin-Petru Rosu", email = "alin-petru.rosu@imdea.org" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cffi>=1.15",
    "protobuf>=6.33,<7",
    "mpmath>=1.3",
]

[project.urls]
Homepage = "https://github.com/vfhe/vfhe"
Repository = "https://github.com/vfhe/vfhe"

[dependency-groups]
dev = [
    "setuptools",
    "cffi>=1.15",
    "grpcio-tools~=1.81.0",
    "protobuf>=6.33,<7",
    "pytest>=7.0",
    "pytest-cov",
    "gcovr",  # C coverage (gcov) for the CI coverage-c job
    "genbadge[coverage]",  # renders the coverage SVG badges in the CI coverage job
    # Runtime dep needed by the CKKS encoding tests (the dev workflow builds the
    # extension in place rather than pip-installing, so runtime deps are listed here).
    "mpmath>=1.3",
    "build",
    "ruff",
    "pyright",
    "clang-format",
]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.ruff]
cache-dir = ".cache/ruff"

[tool.ruff.lint]
select = ["I"]

[tool.pytest.ini_options]
testpaths = ["modules/*/python/test"]
python_files = ["*.py"]
addopts = "--import-mode=importlib"
cache_dir = ".cache/pytest"
markers = [
    "complete: heavy/thorough test (FHE bootstraps); runs only with --complete",
]
