[build-system]
requires = [
    "setuptools>=77",  # >=77: PEP 639 plain-string `license = "Apache-2.0"`
    "setuptools-scm>=8",
    "cffi>=1.15",
    "grpcio-tools~=1.81.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "vfhe"
dynamic = ["version"]
description = "A library for Zero-Knowledge Proofs, (verifiable) Fully Homomorphic Encryption, and related techniques."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
# Names only: PyPI renders just the first name+email pair, but shows the plain
# Author field in full. Surname-sorted; affiliations and contacts in AUTHORS.md.
authors = [
    { name = "Ignacio Cascudo" },
    { name = "Anamaria Costache" },
    { name = "Daniele Cozzo" },
    { name = "Adrien Dubois" },
    { name = "Dario Fiore" },
    { name = "Antonio Guimaraes" },
    { name = "Robin Kostler" },
    { name = "Michal Osadnik" },
    { name = "Alin-Petru Rosu" },
    { name = "Eduardo Soria-Vazquez" },
]
maintainers = [{ name = "The VFHE Maintainers", email = "maintainers@vfhe.ai" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cffi>=1.15",
    "protobuf>=6.33,<7",
    "mpmath>=1.3",
]

[project.scripts]
vfhe_create_headers = "vfhe.misc.dynamic_extensions:cli_main"

[project.urls]
Homepage = "https://github.com/vfhe/vfhe"
Repository = "https://github.com/vfhe/vfhe"
Issues = "https://github.com/vfhe/vfhe/issues"

[dependency-groups]
dev = [
    "setuptools",
    "cffi>=1.15",
    "grpcio-tools~=1.81.0",
    "protobuf>=6.33,<7",
    "pytest>=9.1.1",
    "pytest-cov",
    "gcovr",  # C coverage (gcov) in the CI coverage job
    "twine",  # `twine check --strict` on the sdist metadata in CI
    "build",
    # Runtime dep; listed here because dev builds run in place, not pip-installed.
    "mpmath>=1.3",
    # Pinned: an unpinned formatter bump reformats the tree and fails CI on an
    # unrelated PR. The pre-commit hooks run these same pins.
    "ruff==0.15.20",
    "clang-format==22.1.5",
    "pre-commit",
    "pyright",
]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.ruff]
cache-dir = ".cache/ruff"

[tool.ruff.lint]
# Not `select`: that would replace the E4/E7/E9/F defaults and turn pyflakes off.
extend-select = ["I"]

# Configured here, not in CI flags: a local `pytest --cov=vfhe` measures
# exactly what CI measures.
[tool.coverage.run]
branch = true # match the branch coverage already gated on the C side
source = ["vfhe"]
# Runtime C recompilation and its build helpers; exercised only at build time
# and by the @complete test, which the coverage job does not run.
omit = [
    "*/vfhe/misc/dynamic_extensions.py",
    "*/vfhe/misc/_native_compiler.py",
]

[tool.pytest.ini_options]
testpaths = ["modules/*/python/test"]
# importlib mode: the per-module test dirs are not packages, so same-named test
# files in two modules would collide under the default import mode.
addopts = "--import-mode=importlib"
cache_dir = ".cache/pytest"
markers = [
    "complete: heavy/thorough test (FHE bootstraps); runs only with --complete",
]
